css/styles.css
:root {
    --orange: #ffb663;
    --dark-orange: #e9a250;
}

h1 {
    text-align: center;
}

ul {
    text-align: left;
}

nav {
    background-color: var(--orange);
}

code {
    font-style: normal;
}

.nav-item, .dropdown-item, .navbar-brand, pre, img {
    user-select: none;
}

.container {
    width: 90%;
}

.tutorial-main-container {
    margin-top: 100px; 
    margin-bottom: 5%;
}

.tutorial-content-container {
    margin-top: 2%; 
    margin-bottom: 1%;
    display: flex;
    justify-content: center;
}

.caption {
    font-style: italic;
    text-align: center;
    margin-bottom: 5%;
}

.code-block {
    border-radius: 15px;
    padding-left: 0%;
    padding-right: 0%;
    width: 90%;
}

.code-text {
    padding-left: 2%;
    margin-right: 2%;
    padding-bottom: 2%;
}

.copy-container {
    border-top-left-radius: 14px;
    border-top-right-radius: 14px;
    width: 100%;
    background-color: var(--orange);
    margin-bottom: 1%;
    display: flex;
    justify-content: space-between;
    padding-right: 0%;
    padding-left: 0%;
}

.copy-text, .copy-button {
    padding-left: 2.5%;
    padding-right: 2.5%;
    padding-top: 1%;
    padding-bottom: 1%;
    display: inline-block;
    user-select: none;
}

.copy-button {
    border-top-right-radius: 14px;
}

.copy-button:hover {
    background-color: var(--dark-orange);
    transition-duration: 0.25s;
}

/* Tooltip text */
.tooltiptext {
    visibility:hidden;
    width: 120px;
    background-color: black;
    color: #fff;
    text-align: center;
    padding: 5px 0;
    border-radius: 6px;

    /* Position the tooltip text - see examples below! */
    position: absolute;
    z-index: 1;
}

.home-main-container {
    display: flex;
    justify-content: space-between;
    margin: 0;
    position: absolute;
    top: 47%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 60%;
}

.name {
    text-align: left; 
    font-size: 7rem;
}

.parent {
    position: relative;
    top: 0;
    left: 0;
    width:fit-content;
  }

.avatar {
    position: relative;
    top: 0;
    left: 0;
}

.milo {
    position: absolute;
    top: 66%;
    left: 5%;
}

